syntax = "proto3";
package enreach.manager;

option go_package = "enreach/x/manager/types";

message Manager {
  string managerAccount =1;
  string operatorAccount = 2; 
  string hostAddress = 3;
  uint32 managerHTTPPort = 4;
  uint32 managerWSPort = 5;
  uint32 trackerPort = 6;
  uint32 chainAPIPort = 7;
  uint32 chainRPCPort = 8;
  string regionCode = 9; 
  string registerStatus = 10; 
  string workingStatus = 11;
  string creator = 12;
  uint64 createAt = 13;
  string updator = 14;
  uint64 updateAt = 15;
}
